[project]
name = "esame-sistemi-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.21.0",
    "pycountry>=24.6.1",
    "streamlit>=1.41.1",
]
